tests/src/frontend/typechecking/invalid/ignored_expression.sk
fun main(): void {
  42;
  print_raw("Fail");
}
